@@ -1,0 +1,5 @@
+import os
+print "Line One"
+os.chdir("subdir")
+print "Line Two"
+
